Fix: Add missing price display spans

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
       </p>
     </div>
   </div>
+<div class="card">
+  <h2 class="text-lg font-bold mb-2">Commodities Arbitrage</h2>
+  <div class="space-y-2 text-sm">
+    <p>🪙 Gold Spot Price: <span id="spotPrice">Loading...</span></p>
+    <p>📈 GLD ETF Price: <span id="gldPrice">Loading...</span></p>
+    <p>💸 Arbitrage Opportunity: <span id="arbitrage">Calculating...</span></p>
+  </div>
+</div>
 
   <script src="script.js"></script>
 </body>
