Link script.js in HTML

--- a/index.html
+++ b/index.html
@@ -18,3 +18,7 @@
     <p>💰 Oil Arbitrage: <span id="oilArb">Calculating...</span></p>
   </div>
 </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
